recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:16: error: not found: value lenght
	avance(lenght/2)
               ^